fix add to cart button mobile

--- a/dev/scss/_shop-details.scss
+++ b/dev/scss/_shop-details.scss
@@ -207,6 +207,10 @@
     padding-right: 0;
     text-align: center;
     width: 50%;
+
+    @media (max-width: 767px) {
+        width: 90%;
+    }
 }
 
 .product__details__tab {
